--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,8 +22,15 @@ jobs:
           python -m venv $VENV
           source $VENV/bin/activate
           pip install -r requirements.txt
+          pip install pylint
 
       - name: Run tests
         run: |
           source $VENV/bin/activate
           pytest
+
+      - name: Run Pylint
+        run:  source $VENV/bin/activate
+              pylint june25_classdemo2/
+ 
+      
