--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,36 +1,35 @@
-name: Python test
-
+name: CI Workflow
 on: [push, pull_request]
 
 jobs:
-  tests:
+  build:
     runs-on: ubuntu-latest
-    env:
-        VENV: venv
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+      - name: Run build
+        run: echo "Building…"
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m venv $VENV
-          source $VENV/bin/activate
-          pip install -r requirements.txt
-          pip install pylint
-
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Run tests
-        run: |
-          source $VENV/bin/activate
-          pytest
+        run: echo "Testing…"
 
-      - name: Run Pylint
-        run:  source $VENV/bin/activate
-              pylint june25_classdemo2/
- 
-      
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo "Linting…"
+
+  deploy:
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Deploy
+        run: echo "Deploying…"
